--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
     android:padding="16dp"
-    tools:context=".LoginActivity">
+    tools:context=".activity.LoginActivity">
 
     <TextView
         android:id="@+id/tv_email"
@@ -14,8 +14,7 @@
         android:layout_height="wrap_content"
         android:text="@string/email"
         android:labelFor="@id/et_email"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        style="@style/TexContent"
         app:layout_constraintBottom_toTopOf="@id/et_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -30,36 +29,43 @@
         android:labelFor="@id/tv_email"
         android:textSize="20sp"
         android:theme="@style/MyEditText"
-        app:layout_constraintBottom_toTopOf="@id/tv_password"
+        app:layout_constraintBottom_toTopOf="@id/tv_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/tv_password"
+        android:id="@+id/tv_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/password"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        style="@style/TexContent"
+        android:layout_marginTop="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/et_password"
+        android:id="@+id/et_name"
         style="@style/MyEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/password"
         android:inputType="textPassword"
-        android:labelFor="@id/tv_password"
+        android:labelFor="@id/et_name"
         android:textSize="20sp"
         android:theme="@style/MyEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_password"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@id/tv_name"
+        android:autofillHints="@string/password" />
+
+    <CheckBox
+        android:id="@+id/chk_remember_me"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/remember_me"
+        app:layout_constraintTop_toBottomOf="@id/et_name"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_login"
@@ -67,7 +73,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/ripple_effect"
         android:text="@string/login"
-        app:layout_constraintTop_toBottomOf="@id/et_password"
+        app:layout_constraintTop_toBottomOf="@id/chk_remember_me"
         app:layout_constraintEnd_toEndOf="@id/guideline"
         android:layout_marginEnd="10dp"/>
 
@@ -77,7 +83,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/ripple_effect"
         android:text="@string/reset"
-        app:layout_constraintTop_toBottomOf="@id/et_password"
+        app:layout_constraintTop_toBottomOf="@id/chk_remember_me"
         app:layout_constraintStart_toStartOf="@id/guideline"
         android:layout_marginStart="10dp"/>
 
