--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-<!--        <item name="fontFamily"></item>-->
+        <item name="fontFamily">@font/kalam_regular</item>
     </style>
 
     <style name="MyEditText" parent="Theme.AppCompat.Light">
